--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
   </div>
   
+  <!-- <script src="./nomaljs/arrayfun.js"></script> -->
+  
   <!--<script src="string1.js"></script>-->
   <!--<script src="takeinp.js"></script>-->
-  <!--<script src="arrayfun.js"></script>-->
-  <!--<script src="object.js"></script>-->                    <!--      -->
+  <script src="./nomaljs/object.js"></script>                   
   <!--<script src="objectitera.js"></script>-->
  <!-- <script src="comprop.js"></script>-->
   <!--<script src="inside.js"></script>-->
@@ -46,6 +47,6 @@
   <!-- <script src="./dsa/array1.js"></script> -->
   <!-- <script src="./dsa/pattern.js"></script> -->
   <!-- <script src="./asynchronus/setTimeout.js"></script> -->
-  <script src="http.js"></script>
+  <!-- <script src="http.js"></script> -->
 </body>
 </html>
