--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 
   <div class="container">
 
-  <h1>Dsa practice</h1>
-
+   <h1 class="grid-item">Dsa practice</h1>
+  <div class="grid-item">box1</div>
+  <div class="grid-item">box2</div>
+  <div class="grid-item">box3</div>
+  <div class="grid-item">box4</div>
   </div>
   
   <!-- <script src="./nomaljs/arrayfun.js"></script> -->
-  
+   <!-- <script src="./nomaljs/maps.js"></script> -->
   <!--<script src="string1.js"></script>-->
   <!--<script src="takeinp.js"></script>-->
-  <script src="./nomaljs/object.js"></script>                   
+  <!-- <script src="./nomaljs/object.js"></script>                    -->
   <!--<script src="objectitera.js"></script>-->
  <!-- <script src="comprop.js"></script>-->
   <!--<script src="inside.js"></script>-->
@@ -28,11 +31,15 @@
   <!--<script src="map.js"></script>-->
   <!--<script src="iterables.js"></script>-->
   <!--<script src="set.js"></script>-->
+  <!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++= -->
   <!-- <script src="oop1.js"></script>-->
-    <!-- <script src="objcreate.js"></script> -->
+    <!-- <script src="./oops/objcreate1.js"></script> -->
+    <!-- <script src="./oops/call_apply.js"></script> -->
   <!--  <script src="objcreate2.js"></script> -->
-  <!--  <script src="objcreate3.js"></script> -->
-  <!-- <script src="prototype2.js"></script>-->
+   <!-- <script src="./oops/objcreate3.js"></script> -->
+   <!-- <script src="./oops/objcreate4.js"></script> -->
+  <script src="./oops/prototype2.js"></script>
+  <!-- <script src="./oops/prototype1.js"></script> -->
   <!--  <script src="prclass1.js"></script> -->
   <!--  <script src="prclass2.js"></script>-->
     <!--    <script src="prclass3.js"></script>-->
@@ -43,7 +50,7 @@
   =========================== data structures in javascript ========================= =======================-->
  
  
-  <!--      <script src="./dsa/switch.js"></script>-->
+  <!-- <script src="./dsa/switch.js"></script>-->
   <!-- <script src="./dsa/array1.js"></script> -->
   <!-- <script src="./dsa/pattern.js"></script> -->
   <!-- <script src="./asynchronus/setTimeout.js"></script> -->
