--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
 
-  <div class="container">
+  <div class="grid-container">
 
-   <h1 class="grid-item">Dsa practice</h1>
+  <h1 class="grid-item">Dsa practice</h1>
   <div class="grid-item">box1</div>
   <div class="grid-item">box2</div>
   <div class="grid-item">box3</div>
+  <div class="grid-item">box4</div>
   <div class="grid-item">box4</div>
   </div>
   
@@ -38,10 +39,10 @@
   <!--  <script src="objcreate2.js"></script> -->
    <!-- <script src="./oops/objcreate3.js"></script> -->
    <!-- <script src="./oops/objcreate4.js"></script> -->
-  <script src="./oops/prototype2.js"></script>
+  <!-- <script src="./oops/prototype2.js"></script> -->
   <!-- <script src="./oops/prototype1.js"></script> -->
-  <!--  <script src="prclass1.js"></script> -->
-  <!--  <script src="prclass2.js"></script>-->
+   <!-- <script src="./oops/prclass1.js"></script> -->
+   <script src="./oops/prclass2.js"></script>
     <!--    <script src="prclass3.js"></script>-->
     <!-- <script src="21.js"></script>-->
 
