"static property check"

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
   <!-- <script src="./oops/prototype2.js"></script> -->
   <!-- <script src="./oops/prototype1.js"></script> -->
    <!-- <script src="./oops/prclass1.js"></script> -->
-   <script src="./oops/prclass2.js"></script>
+   <!-- <script src="./oops/prclass2.js"></script> -->
     <!--    <script src="prclass3.js"></script>-->
     <!-- <script src="21.js"></script>-->
-
+<script src="./oops/static.js"></script>
     <!--=======================================================================================================
     ===========================================================================================================
   =========================== data structures in javascript ========================= =======================-->
