"hoisting in js"

--- a/advancejs/index.html
+++ b/advancejs/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="name"><h2>hello advance js</h2></div>
 
-    <script src="promise.js"></script>
+    <!-- <script src="promise.js"></script> -->
+    <!-- <script src="./namaste.js"></script> -->
 </body>
 </html>
