--- a/advancejs/index.html
+++ b/advancejs/index.html
@@ -12,5 +12,6 @@
 
     <!-- <script src="promise.js"></script> -->
     <!-- <script src="./namaste.js"></script> -->
+    <script src="../asynchronus/callback.js"></script>
 </body>
 </html>
