--- a/advancejs/index.html
+++ b/advancejs/index.html
@@ -12,6 +12,7 @@
 
     <!-- <script src="promise.js"></script> -->
     <!-- <script src="./namaste.js"></script> -->
-    <script src="../asynchronus/callback.js"></script>
+    <!-- <script src="../asynchronus/callback.js"></script> -->
+    <script src="./closures.js"></script>
 </body>
 </html>
