--- a/index.html
+++ b/index.html
@@ -1,60 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="grid-container">
+      <h1 class="grid-item">Dsa practice</h1>
+      <div class="grid-item">box1</div>
+      <div class="grid-item">box2</div>
+      <div class="grid-item">box3</div>
+      <div class="grid-item">box4</div>
+      <div class="grid-item">box4</div>
+    </div>
 
-  <div class="grid-container">
-
-  <h1 class="grid-item">Dsa practice</h1>
-  <div class="grid-item">box1</div>
-  <div class="grid-item">box2</div>
-  <div class="grid-item">box3</div>
-  <div class="grid-item">box4</div>
-  <div class="grid-item">box4</div>
-  </div>
-  
-  <!-- <script src="./nomaljs/arrayfun.js"></script> -->
-   <!-- <script src="./nomaljs/maps.js"></script> -->
-  <!--<script src="string1.js"></script>-->
-  <!--<script src="takeinp.js"></script>-->
-  <!-- <script src="./nomaljs/object.js"></script>                    -->
-  <!--<script src="objectitera.js"></script>-->
- <!-- <script src="comprop.js"></script>-->
-  <!--<script src="inside.js"></script>-->
-  <!--<script src="practice.js"></script>-->
-  <!--<script src="forEach.js"></script>-->
-  <!--<script src="map.js"></script>-->
-  <!--<script src="iterables.js"></script>-->
-  <!--<script src="set.js"></script>-->
-  <!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++= -->
-  <!-- <script src="oop1.js"></script>-->
+    <!-- <script src="./nomaljs/arrayfun.js"></script> -->
+    <!-- <script src="./nomaljs/maps.js"></script> -->
+    <!--<script src="string1.js"></script>-->
+    <!--<script src="takeinp.js"></script>-->
+    <!-- <script src="./nomaljs/object.js"></script>                    -->
+    <!--<script src="objectitera.js"></script>-->
+    <!-- <script src="comprop.js"></script>-->
+    <!--<script src="inside.js"></script>-->
+    <!--<script src="practice.js"></script>-->
+    <!--<script src="forEach.js"></script>-->
+    <!--<script src="map.js"></script>-->
+    <!--<script src="iterables.js"></script>-->
+    <!--<script src="set.js"></script>-->
+    <!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++= -->
+    <!-- <script src="oop1.js"></script>-->
     <!-- <script src="./oops/objcreate1.js"></script> -->
     <!-- <script src="./oops/call_apply.js"></script> -->
-  <!--  <script src="objcreate2.js"></script> -->
-   <!-- <script src="./oops/objcreate3.js"></script> -->
-   <!-- <script src="./oops/objcreate4.js"></script> -->
-  <!-- <script src="./oops/prototype2.js"></script> -->
-  <!-- <script src="./oops/prototype1.js"></script> -->
-   <!-- <script src="./oops/prclass1.js"></script> -->
-   <!-- <script src="./oops/prclass2.js"></script> -->
+    <!--  <script src="objcreate2.js"></script> -->
+    <!-- <script src="./oops/objcreate3.js"></script> -->
+    <!-- <script src="./oops/objcreate4.js"></script> -->
+    <!-- <script src="./oops/prototype2.js"></script> -->
+    <!-- <script src="./oops/prototype1.js"></script> -->
+    <!-- <script src="./oops/prclass1.js"></script> -->
+    <!-- <script src="./oops/prclass2.js"></script> -->
     <!--    <script src="prclass3.js"></script>-->
     <!-- <script src="21.js"></script>-->
-<script src="./oops/static.js"></script>
-    <!--=======================================================================================================
-    ===========================================================================================================
-  =========================== data structures in javascript ========================= =======================-->
- 
- 
-  <!-- <script src="./dsa/switch.js"></script>-->
-  <!-- <script src="./dsa/array1.js"></script> -->
-  <!-- <script src="./dsa/pattern.js"></script> -->
-  <!-- <script src="./asynchronus/setTimeout.js"></script> -->
-  <!-- <script src="http.js"></script> -->
-</body>
+    <!-- <script src="./oops/static.js"></script> -->
+        
+    <!-- ++++++++++++++++++  -->
+    <!-- <script src="./asynchronus/setTimeout.js"></script> -->
+    <script src="./asynchronus/callback.js"></script>
+    <!-- <script src="http.js"></script> -->
+  </body>
 </html>
