--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
   </head>
   <body>
     <div class="grid-container">
-      <h1 class="grid-item">Dsa practice</h1>
-      <div class="grid-item">box1</div>
-      <div class="grid-item">box2</div>
-      <div class="grid-item">box3</div>
-      <div class="grid-item">box4</div>
-      <div class="grid-item">box4</div>
+      <h1 class="grid-item">Javscript practice</h1>
     </div>
 
     <!-- <script src="./nomaljs/arrayfun.js"></script> -->
@@ -44,11 +39,11 @@
     <!--    <script src="prclass3.js"></script>-->
     <!-- <script src="21.js"></script>-->
     <!-- <script src="./oops/static.js"></script> -->
-        
+
     <!-- ++++++++++++++++++  -->
     <!-- <script src="./asynchronus/setTimeout.js"></script> -->
     <!-- <script src="./asynchronus/callback.js"></script> -->
-    <script src="./asynchronus/callbackhell.js"></script>
+    <!-- <script src="./asynchronus/callbackhell.js"></script> -->
     <!-- <script src="http.js"></script> -->
   </body>
 </html>
