--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
     <!-- <script src="./asynchronus/callback.js"></script> -->
     <!-- <script src="./asynchronus/callbackhell.js"></script> -->
     <!-- <script src="http.js"></script> -->
+    <script src="./myjs.js"></script>
   </body>
 </html>
