--- a/asynchronus/callbackhell.html
+++ b/asynchronus/callbackhell.html
@@ -15,7 +15,8 @@
       <div class="grid-item">DIV 4</div>
       <div class="grid-item">DIV 5</div>
     </div>
-        <script src="./callbackhell.js"></script>
+        <!-- <script src="./callbackhell.js"></script> -->
     <!-- <script src="http.js"></script> -->
+    <script src="./doompyra.js"></script>
   </body>
 </html>
