--- a/asynchronus/asyncproject/async.html
+++ b/asynchronus/asyncproject/async.html
@@ -15,7 +15,7 @@
       <div class="grid-item">DIV 4</div>
       <div class="grid-item">DIV 5</div>
     </div>
-    
+     <script src="./async.js"></script>
     
   </body>
 </html>
