--- a/advancejs/index.html
+++ b/advancejs/index.html
@@ -13,6 +13,7 @@
     <!-- <script src="promise.js"></script> -->
     <!-- <script src="./namaste.js"></script> -->
     <!-- <script src="../asynchronus/callback.js"></script> -->
-    <script src="./closures.js"></script>
+    <!-- <script src="./closures.js"></script> -->
+    <script src="./module1.js" type="module"></script>
 </body>
 </html>
