--- a/asynchronus/Ajax.html
+++ b/asynchronus/Ajax.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./Ajx.css" />
     <title>Document</title>
-</head>
-<body>
-    <h2> XHR PRACTICE</h2>
-</body>
-<script src="./AJAX2.js"></script>
+  </head>
+  <body>
+    <h2>XHR PRACTICE</h2>
+    <div class="grid-continer">
+      <!--  <div class="grid-item"></div>  -->
+    </div>
+  </body>
+  <script src="./AJAX2.js"></script>
 </html>
