"fetch Api and ajax"

--- a/asynchronus/Ajax.html
+++ b/asynchronus/Ajax.html
@@ -12,5 +12,6 @@
       <!--  <div class="grid-item"></div>  -->
     </div>
   </body>
-  <script src="./AJAX2.js"></script>
+  <!-- <script src="./AJAX2.js"></script> -->
+  <script src="./FetchApi.js"></script>
 </html>
