--- a/asynchronus/AJaxProject/weather.html
+++ b/asynchronus/AJaxProject/weather.html
@@ -35,6 +35,6 @@
         </div>
       </section>
     </main>
-    <script src="script.js"></script>
+    <script src="./weather.js"></script>
   </body>
 </html>
