--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
     <!--<script src="string1.js"></script>-->
     <!--<script src="takeinp.js"></script>-->
     <!-- <script src="./nomaljs/object.js"></script>                    -->
-    <!--<script src="objectitera.js"></script>-->
+   
     <!-- <script src="comprop.js"></script>-->
     <!--<script src="inside.js"></script>-->
     <!--<script src="practice.js"></script>-->
     <!--<script src="forEach.js"></script>-->
     <!--<script src="map.js"></script>-->
-    <!--<script src="iterables.js"></script>-->
+    <!-- <script src="./normalJs/objiteration.js"></script> -->
+    <script src="./normalJs/object.js"></script>
     <!--<script src="set.js"></script>-->
     <!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++= -->
     <!-- <script src="oop1.js"></script>-->
