--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--<script src="forEach.js"></script>-->
     <!--<script src="map.js"></script>-->
     <!-- <script src="./normalJs/objiteration.js"></script> -->
-    <script src="./normalJs/object.js"></script>
+    <!-- <script src="./normalJs/object.js"></script> -->
     <!--<script src="set.js"></script>-->
     <!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++= -->
     <!-- <script src="oop1.js"></script>-->
@@ -46,5 +46,8 @@
     <!-- <script src="./asynchronus/callback.js"></script> -->
     <!-- <script src="./asynchronus/callbackhell.js"></script> -->
     <!-- <script src="http.js"></script> -->
+
+    <!-- ================LOGICALQUES========================== -->
+    <script src="./logicalQues//armstrong.js"></script>
   </body>
 </html>
