--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <!-- <script src="./asynchronus/callback.js"></script> -->
     <!-- <script src="./asynchronus/callbackhell.js"></script> -->
     <!-- <script src="http.js"></script> -->
-
+  <script src="./asynchronus/FetchApi.js"></script>
     <!-- ================LOGICALQUES========================== -->
-    <script src="./logicalQues//armstrong.js"></script>
+    <!-- <script src="./logicalQues//armstrong.js"></script> -->
   </body>
 </html>
