--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     
     <!-- <script src="./logicalQues//armstrong.js"></script> -->
-    <script src="./test.js"></script>
+    <!-- <script src="./test.js"></script> -->
+    <script src="./AlgoDS/Hashmaps/twoSum.js"></script>
   </body>
 </html>
