--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     
     <!-- <script src="./logicalQues//armstrong.js"></script> -->
     <!-- <script src="./test.js"></script> -->
-    <script src="./AlgoDS/Hashmaps/twoSum.js"></script>
+    <script src="./AlgoDS/Hashmaps/duplicate.js"></script>
   </body>
 </html>
